# global-ecom-calendar

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: fetch-news.yml  release.yml
assets/: index-BbXgoHsU.css  index-kgrH0oJN.js
public/: manifest.json  news.json  sw.js
scripts/: fetch-news.js  fix-climate.py  lookup_cities.py  update-subregions.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: DataCard.tsx  ExchangeRateBar.tsx  Header.tsx  MonthSection.tsx  NebulaBackground.tsx  NewsTicker.tsx  RegionSelector.tsx  ScrollArea.tsx
src/data/: regionData.ts  weatherCities.ts
src/lib/: countdown.ts  exchangeRate.ts  icons.tsx  platformLogos.ts  weather.ts
src/types/: index.ts
