[package]
name = "global-ecom-calendar"
version = "2.0.0"
description = "全球节日活动与采购指南 - 跨境电商工具"
authors = ["Global Ecom Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = { version = "2", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
